[gd_scene load_steps=3 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 1244.75, 21.9204, 1241.4, 613.165, 18.8308, 608.155, 20.501, 31.9416 )

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )
lineThickness = 2
lineColor = Color( 0.14238, 0.748477, 0.847656, 1 )
inkHealthBarWidth = 100
createColisions = true
simplifyColShape = 6
maxDrawnColShapes = 3

[node name="gui" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 4.0
margin/right = 1280.0
margin/bottom = 720.0

[node name="status" type="Label" parent="gui"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 796.0
margin/top = 632.0
margin/right = 1011.0
margin/bottom = 665.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="draw_zone" type="Panel" parent="gui"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1264.0
margin/bottom = 643.0

[node name="drawArea" type="Area2D" parent="gui/draw_zone"]

editor/display_folded = true
transform/pos = Vector2( -11, -16 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="gui/draw_zone/drawArea"]

build_mode = 0
polygon = Vector2Array( 20.501, 31.9416, 18.8308, 608.155, 1241.4, 613.165, 1244.75, 21.9204 )
shape_range = Vector2( 0, 0 )
trigger = true

[node name="addGuester" type="Button" parent="gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 52.0
margin/top = 661.0
margin/right = 185.0
margin/bottom = 683.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "addGuester"
flat = false

[node name="guester_name" type="LineEdit" parent="gui/addGuester"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 164.0
margin/top = -2.0
margin/right = 296.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="draw" type="Label" parent="gui/addGuester"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 319.0
margin/top = 5.0
margin/right = 536.0
margin/bottom = 30.0
text = "NUM"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="cube" type="Particles2D" parent="gui"]

transform/pos = Vector2( 662.158, 169.074 )
config/amount = 64
config/lifetime = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 20.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 1, 0.900452, 0.0898438, 0.174863 )

[node name="saveGesturesToJson" type="Button" parent="gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 613.0
margin/top = 654.0
margin/right = 726.0
margin/bottom = 687.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[connection signal="mouse_enter" from="gui/draw_zone" to="." method="_on_draw_zone_mouse_enter"]

[connection signal="mouse_exit" from="gui/draw_zone" to="." method="_on_draw_zone_mouse_exit"]

[connection signal="pressed" from="gui/addGuester" to="." method="_on_addGuester_pressed"]

[connection signal="pressed" from="gui/saveGesturesToJson" to="." method="_on_Button_pressed"]


